@@ -1,6 +1,7 @@
 TODO
 ====
-8.
+8. Resit nejak newline v hodnote?
+9.
 
 Applied
 =======
