@@ -4,7 +4,9 @@ use warnings;
 
 # Modules.
 use Config::Dot;
-use Test::More 'tests' => 3;
+use English qw(-no_match_vars);
+use Error::Pure::Utils qw(clean);
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
@@ -28,3 +30,16 @@ key.subkey=value
 END
 chomp $right_ret;
 is($c->serialize, $right_ret, 'Serialize key with subkey.');
+
+# Test.
+$c = Config::Dot->new(
+	'config' => {
+		'key' => "Foo\nBar",
+	},
+);
+eval {
+	$c->serialize;
+};
+is($EVAL_ERROR, "Unsupported stay with newline in value.\n",
+	'Unsupported stay with newline in value.');
+clean();
